完成role store 表单验证

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "mews/captcha": "^3.2",
+        "overtrue/laravel-lang": "~6.0",
         "spatie/laravel-permission": "^5.9",
         "spatie/laravel-query-builder": "^5.1"
     },
